--- a/Styles/assignment.css
+++ b/Styles/assignment.css
@@ -224,6 +224,7 @@ margin-top: 48px;
     
     
 }
+/* my current target ends here */
 /* my next target starts here */
 .my-next-target-container{
     width: 1140px;
@@ -242,7 +243,7 @@ margin-top: 48px;
     justify-content: center;
     align-items: center;
     gap: 24px;
-    padding: 35px;
+    padding: 34px;
     border: 1px solid rgba(13, 19, 33, 0.2);
     border-radius: 16px;
     margin-top: 48px;
