--- a/Styles/assignment.css
+++ b/Styles/assignment.css
@@ -220,7 +220,7 @@ margin-top: 48px;
     margin-top: px;
     font-size: 16px;
     font-weight: 700;
-    color:rgb(13, 19, 33)
+    color:rgb(13, 19, 33);
     
     
 }
@@ -243,7 +243,7 @@ margin-top: 48px;
     justify-content: center;
     align-items: center;
     gap: 24px;
-    padding: 34px;
+    padding: 35px;
     border: 1px solid rgba(13, 19, 33, 0.2);
     border-radius: 16px;
     margin-top: 48px;
@@ -279,6 +279,7 @@ margin-bottom: 100px;
     background-color:rgba(0, 0, 0, 0.6);
     background-blend-mode: overlay;
     margin-top: 41px;
+    margin-top: 1700px;
 
 
 
@@ -286,13 +287,12 @@ margin-bottom: 100px;
 .footer-section{
 display: flex;
 flex-direction: column;
-justify-content: space-around;
+justify-content: space-between;
 
 padding: 68px 48px;
 width: 1044px;
-height: 188px;
+height: 190px;
 
-    
 }
 .footer-title{
     text-align: center;
@@ -356,7 +356,7 @@ textarea{
 }
 .open-commitment-title{
     font-size: 20px;
-    font-weight: 599;
+    font-weight: 600px;
 }
 
 
